update service unavailability warnings
